<resources>
    <string name="app_name">TareaMapa</string>
    <string name="action_settings">Settings</string>
    <string name="nombre_gallese">Pedro Gallese</string>
    <string name="nombre_corso">Aldo Corso</string>
    <string name="nombre_mudo">Alberto Rodriguez</string>
    <string name="nombre_la_zombra">Christian Ramos</string>
    <string name="nombre_genio">Miguel Trauco</string>
    <string name="nombre_tapia">Renato Tapia</string>
    <string name="nombre_yotun">Yosimar Yotun</string>
    <string name="nombre_cueva">Christian Cueva</string>
    <string name="nombre_carrillo">Andre Carrillo</string>
    <string name="nombre_flores">Edison Flores</string>
    <string name="nombre_farfan">Jeferson Farfan</string>
    <string name="posicion_pedro">Arquero</string>
    <string name="posicion_corso">Defensa derecho</string>
    <string name="posicion_mudo">Defensa central</string>
    <string name="posicion_zombra">Defensa central</string>
    <string name="posicion_genio">Defensa izquierdo</string>
    <string name="posicion_tapia">Volante Mixto</string>
    <string name="posicion_yotun">Volante de creación</string>
    <string name="posicion_cueva">Volante de creación</string>
    <string name="posicion_carrillo">Volante de avanzada</string>
    <string name="posicion_flores">Volante de avanzada</string>
    <string name="posicion_farfan">Delantero</string>
    <string name="juega_gallese">Tiburones de Mexico.</string>
    <string name="juega_corso">Universitario de deportes</string>
    <string name="juega_zombra">Barcelana Ecuador</string>
    <string name="juega_mudo">Universitario de deportes</string>
    <string name="juega_genio">Flamengo de brasil</string>
    <string name="juega_tapia">Feyernood de Holanda</string>
    <string name="juega_yotun">New your city</string>
    <string name="juega_cueva">San Pablo</string>
    <string name="juega_carrillo">Warford</string>
    <string name="juega_flores">Dinamarca</string>
    <string name="juega_farfan">Rusia</string>
    <string name="bio_gallese">Juega de arquero y su actual equipo es el Tiburones Rojos de Veracruz
        de la Primera División de México.</string>
    <string name="bio_corzo">Esta es la biografia de Aldo corso</string>
    <string name="bio_ramos">Esta es la biografia de pedro Ramos</string>
    <string name="bio_mudo">Esta es la biografia de Alberto Rodrigues</string>
    <string name="bio_genio">Esta es la biografia de Genio</string>
    <string name="bio_tapia">Esta es la biografia de Tapia</string>
    <string name="bio_yotun">Esta es la biografia de Yotun</string>
    <string name="bio_cueva">Esta es la biografia de Cueva</string>
    <string name="bio_carrillo">Esta es la biografia de Carrillo</string>
    <string name="bio_flores">Esta es la biografia de Flores</string>
    <string name="bio_farfan">Esta es la biografia de Farfan</string>
    <string name="title_activity_icon">About Icon</string>

    <string name="lat_gallese">40.742551</string>
    <string name="lat_corso">-1.831239</string>
    <string name="lat_mudo">-14.235004</string>
    <string name="lat_la_zombra">-35.675147</string>
    <string name="lat_genio">-16.290154</string>
    <string name="lat_tapia">-32.522779</string>
    <string name="lat_yotun">-23.442503</string>
    <string name="lat_cueva">-1.831239</string>
    <string name="lat_carrillo">-38.416097</string>
    <string name="lat_flores">23.634501</string>
    <string name="lat_farfan">56.130366</string>

    <string name="long_gallese">-84.105226</string>
    <string name="long_corso">-78.183406</string>
    <string name="long_mudo">-51.925280</string>
    <string name="long_la_zombra">-71.542969</string>
    <string name="long_genio">-63.588653</string>
    <string name="long_tapia">-55.765835</string>
    <string name="long_yotun">-58.443832</string>
    <string name="long_cueva">-78.183406</string>
    <string name="long_carrillo">-63.616672</string>
    <string name="long_flores">-102.552784</string>
    <string name="long_farfan">-106.346771</string>
    <string name="title_activity_maps">Map</string>
</resources>